{
  "version": 4,
  "terraform_version": "1.0.5",
  "serial": 57,
  "lineage": "32798e2d-e991-7450-2587-a0ef3f823b88",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip-devops-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "associate_with_private_ip": "192.168.1.20",
            "association_id": "eipassoc-0590d644e25771f8b",
            "domain": "vpc",
            "id": "eipalloc-f5ed90f8",
            "instance": "i-07d17baf98198baec",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-025834ceefd998501",
            "private_dns": "ip-192-168-1-20.eu-central-1.compute.internal",
            "private_ip": "192.168.1.20",
            "public_dns": "ec2-18-197-193-131.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.197.193.131",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip-devops-01"
            },
            "tags_all": {
              "Name": "eip-devops-01"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_network_interface.ni-devops-01",
            "aws_security_group.sgweb01",
            "aws_subnet.sn-web-01",
            "aws_vpc.vpc-web-01",
            "aws_internet_gateway.igw-web-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip-monitoring-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "associate_with_private_ip": "192.168.1.30",
            "association_id": "eipassoc-0a227f164266aa02d",
            "domain": "vpc",
            "id": "eipalloc-c5dba6c8",
            "instance": "i-0f355fcbc3e0d15a4",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-02769b704e06a8e48",
            "private_dns": "ip-192-168-1-30.eu-central-1.compute.internal",
            "private_ip": "192.168.1.30",
            "public_dns": "ec2-35-156-158-88.eu-central-1.compute.amazonaws.com",
            "public_ip": "35.156.158.88",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip-monitoring-01"
            },
            "tags_all": {
              "Name": "eip-monitoring-01"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_subnet.sn-web-01",
            "aws_vpc.vpc-web-01",
            "aws_internet_gateway.igw-web-01",
            "aws_network_interface.ni-monitoring-01",
            "aws_security_group.sgweb01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip-web-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "associate_with_private_ip": "192.168.1.10",
            "association_id": "eipassoc-07cc2cf19669fe553",
            "domain": "vpc",
            "id": "eipalloc-62d5a86f",
            "instance": "i-031b694cc508e2756",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-0468936abe7cb4d66",
            "private_dns": "ip-192-168-1-10.eu-central-1.compute.internal",
            "private_ip": "192.168.1.10",
            "public_dns": "ec2-52-29-23-54.eu-central-1.compute.amazonaws.com",
            "public_ip": "52.29.23.54",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip-web-01"
            },
            "tags_all": {
              "Name": "eip-web-01"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw-web-01",
            "aws_network_interface.ni-web-01",
            "aws_security_group.sgweb01",
            "aws_subnet.sn-web-01",
            "aws_vpc.vpc-web-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "devops",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06ec8443c2a35b0ba",
            "arn": "arn:aws:ec2:eu-central-1:077175212337:instance/i-07d17baf98198baec",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07d17baf98198baec",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "stopped",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "web-vpc-keypair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-025834ceefd998501"
              }
            ],
            "primary_network_interface_id": "eni-025834ceefd998501",
            "private_dns": "ip-192-168-1-20.eu-central-1.compute.internal",
            "private_ip": "192.168.1.20",
            "public_ip": "18.197.193.131",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ce35c233b0205bae",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0833cf608ec01ca33",
            "tags": {
              "Name": "devops"
            },
            "tags_all": {
              "Name": "devops"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0dd09a1507327c2c6"
            ]
          },
          "dependencies": [
            "aws_network_interface.ni-devops-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "monitoring",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06ec8443c2a35b0ba",
            "arn": "arn:aws:ec2:eu-central-1:077175212337:instance/i-0f355fcbc3e0d15a4",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f355fcbc3e0d15a4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "stopped",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "web-vpc-keypair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-02769b704e06a8e48"
              }
            ],
            "primary_network_interface_id": "eni-02769b704e06a8e48",
            "private_dns": "ip-192-168-1-30.eu-central-1.compute.internal",
            "private_ip": "192.168.1.30",
            "public_ip": "35.156.158.88",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-090e2483b533e6789",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0833cf608ec01ca33",
            "tags": {
              "Name": "monitoring"
            },
            "tags_all": {
              "Name": "monitoring"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0dd09a1507327c2c6"
            ]
          },
          "dependencies": [
            "aws_network_interface.ni-monitoring-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06ec8443c2a35b0ba",
            "arn": "arn:aws:ec2:eu-central-1:077175212337:instance/i-031b694cc508e2756",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-031b694cc508e2756",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "stopped",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "web-vpc-keypair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-0468936abe7cb4d66"
              }
            ],
            "primary_network_interface_id": "eni-0468936abe7cb4d66",
            "private_dns": "ip-192-168-1-10.eu-central-1.compute.internal",
            "private_ip": "192.168.1.10",
            "public_ip": "52.29.23.54",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01e8ad7552680fd94",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0833cf608ec01ca33",
            "tags": {
              "Name": "web"
            },
            "tags_all": {
              "Name": "web"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0dd09a1507327c2c6"
            ]
          },
          "dependencies": [
            "aws_network_interface.ni-web-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw-web-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:077175212337:internet-gateway/igw-032d6a51826e8e08a",
            "id": "igw-032d6a51826e8e08a",
            "owner_id": "077175212337",
            "tags": {
              "Name": "igw-web-01"
            },
            "tags_all": {
              "Name": "igw-web-01"
            },
            "vpc_id": "vpc-03c895437f0cdd709"
          },
          "dependencies": [
            "aws_vpc.vpc-web-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "ni-devops-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "attachment": [
              {
                "attachment_id": "eni-attach-0639ee1702e9ad49e",
                "device_index": 0,
                "instance": "i-07d17baf98198baec"
              }
            ],
            "id": "eni-025834ceefd998501",
            "interface_type": "interface",
            "ipv6_address_count": 0,
            "mac_address": "02:c8:3a:42:64:be",
            "private_ip": "192.168.1.20",
            "private_ips": [
              "192.168.1.20"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0dd09a1507327c2c6"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0833cf608ec01ca33"
          },
          "dependencies": [
            "aws_security_group.sgweb01",
            "aws_subnet.sn-web-01",
            "aws_vpc.vpc-web-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "ni-monitoring-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "attachment": [
              {
                "attachment_id": "eni-attach-0569aa78e7c04595e",
                "device_index": 0,
                "instance": "i-0f355fcbc3e0d15a4"
              }
            ],
            "id": "eni-02769b704e06a8e48",
            "interface_type": "interface",
            "ipv6_address_count": 0,
            "mac_address": "02:82:b4:43:2d:28",
            "private_ip": "192.168.1.30",
            "private_ips": [
              "192.168.1.30"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0dd09a1507327c2c6"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0833cf608ec01ca33"
          },
          "dependencies": [
            "aws_security_group.sgweb01",
            "aws_subnet.sn-web-01",
            "aws_vpc.vpc-web-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "ni-web-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "attachment": [
              {
                "attachment_id": "eni-attach-0a1b58c746c280d82",
                "device_index": 0,
                "instance": "i-031b694cc508e2756"
              }
            ],
            "id": "eni-0468936abe7cb4d66",
            "interface_type": "interface",
            "ipv6_address_count": 0,
            "mac_address": "02:cc:15:fd:21:16",
            "private_ip": "192.168.1.10",
            "private_ips": [
              "192.168.1.10"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0dd09a1507327c2c6"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0833cf608ec01ca33"
          },
          "dependencies": [
            "aws_vpc.vpc-web-01",
            "aws_security_group.sgweb01",
            "aws_subnet.sn-web-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb-web-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:077175212337:route-table/rtb-0bd18d3f508c8c914",
            "id": "rtb-0bd18d3f508c8c914",
            "owner_id": "077175212337",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-032d6a51826e8e08a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rtb-web-01"
            },
            "tags_all": {
              "Name": "rtb-web-01"
            },
            "vpc_id": "vpc-03c895437f0cdd709"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw-web-01",
            "aws_vpc.vpc-web-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtb-web-assc-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-092d617b74fa522b9",
            "route_table_id": "rtb-0bd18d3f508c8c914",
            "subnet_id": "subnet-0833cf608ec01ca33"
          },
          "dependencies": [
            "aws_internet_gateway.igw-web-01",
            "aws_route_table.rtb-web-01",
            "aws_subnet.sn-web-01",
            "aws_vpc.vpc-web-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sgweb01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:077175212337:security-group/sg-0dd09a1507327c2c6",
            "description": "allow all ports within VPC and allow SSH from anywhere",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dd09a1507327c2c6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Grafana port access to Monitoring Instance",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Promethes port access to Monitoring Instance",
                "from_port": 9090,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9090
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH access to All Instance",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http access to Web server Instance",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "192.168.0.0/16"
                ],
                "description": "All TCP ports allowed inside VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "allow_tcp",
            "name_prefix": "",
            "owner_id": "077175212337",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sq-web-01"
            },
            "tags_all": {
              "Name": "sq-web-01"
            },
            "timeouts": null,
            "vpc_id": "vpc-03c895437f0cdd709"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-web-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn-web-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:077175212337:subnet/subnet-0833cf608ec01ca33",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "192.168.1.0/24",
            "id": "subnet-0833cf608ec01ca33",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "077175212337",
            "tags": {
              "Name": "sn-web-01"
            },
            "tags_all": {
              "Name": "sn-web-01"
            },
            "vpc_id": "vpc-03c895437f0cdd709"
          },
          "dependencies": [
            "aws_vpc.vpc-web-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-web-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:077175212337:vpc/vpc-03c895437f0cdd709",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0832127fef4c524a4",
            "default_route_table_id": "rtb-04a1d6b87d54ee0be",
            "default_security_group_id": "sg-0bc4cf897116936c3",
            "dhcp_options_id": "dopt-b31177db",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-03c895437f0cdd709",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-04a1d6b87d54ee0be",
            "owner_id": "077175212337",
            "tags": {
              "Name": "vpc-web-01"
            },
            "tags_all": {
              "Name": "vpc-web-01"
            }
          }
        }
      ]
    }
  ]
}